# protoshares_momentum_opencl

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  momentum_gpu.cpp
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
